Improve command detail quality